--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -45,6 +45,7 @@ nav img {
 }
 
 nav img:hover {
-    filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+    filter: invert(10%) sepia(100%) saturate(1400%)
+     hue-rotate(30deg) brightness(180%) contrast(100%);
 
 }
