--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,14 @@ body {
 h1 {
   font-family: 'Reem Kufi', sans-serif;
 }
+
+.btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: orange;
+  color: black;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+}
