--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+  .container {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  
+
 body {
   background-color: #f5f5f5;
 }
