--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -3,8 +3,10 @@
     display: flex;
     align-items: center;
     margin: 0 auto;
-    max-width: 1450px;
+    max-width: 1500px;
     padding-top: 220px;
+    padding-bottom: 100px;
+    
 
 }
 
