--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,9 +8,6 @@ nav {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    padding-top: 40px;
-    padding-left: 20%;
-    padding-right: 20%;
 }
 
 nav h1 {
@@ -48,4 +45,9 @@ nav img:hover {
     filter: invert(10%) sepia(100%) saturate(1400%)
      hue-rotate(30deg) brightness(180%) contrast(100%);
 
+}
+
+.orange-nav {
+    background-color: white;
+    transition: 0.5s;
 }
