--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,14 @@ h4 {
   height: 70px;
   margin-right: 10px;
 }
+
+.contact {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  background-color: white;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+}
