--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -6,7 +6,11 @@
     max-width: 1500px;
     padding-top: 20px;
     padding-bottom: 100px;
+    transition: all 0.3s ease;
+}
 
+.about:hover {
+    transform: translateY(20px);
 }
 
 .about-left img {
