--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -6,8 +6,11 @@
     max-width: 1500px;
     padding-top: 220px;
     padding-bottom: 100px;
-    
+    transition: all 0.3s ease;
+}
 
+.hero:hover {
+    transform: translateY(-20px);
 }
 
 .hero-left h1 {
