--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ h2 {
   color: #4C4C4C;
 }
 
+h3 {
+  font-family: 'Reem Kufi', sans-serif;
+}
+
 h4 {
   font-family: Montserrat;
   font-size: 20px;
@@ -56,6 +60,24 @@ h4 {
   background-color: #ff8c00;
 }
 
+.secondary-btn {
+  position: absolute;
+  right: 35%;
+  padding: 20px 30px 20px 30px;
+  border: none;
+  border-radius: 100px;
+  background-color: orange;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.secondary-btn:hover {
+  background-color: #ff8c00;
+}
+
 .watch-video {
   display: flex;
   align-items: center;
@@ -77,13 +99,20 @@ h4 {
   margin-right: 10px;
 }
 
-.contact {
-  padding: 10px 20px;
+input {
+  position: relative;
+  padding: 30px 200px 30px 200px;
   border: none;
-  border-radius: 10px;
+  border-radius: 100px;
   background-color: white;
-  color: white;
   font-size: 18px;
   font-weight: 500;
+  text-align: left;
   cursor: pointer;
+  z-index: 0;
+}
+
+input::placeholder {
+  color: #828282;
+  text-align: left;
 }
